# CABiNet

./: .flake8  .gitignore  .pre-commit-config.yaml  CITATION.bib  CITATION.cff  CONTRIBUTING.md  README.md  cabinet.py  cabinet_environment.yml  cityscapes.py  demo.py  environment.yml  evaluate_cabinet_citys.py  logger.py  mobilenetv3.py  pre-commit_hooks_install.md  pyproject.toml  requirements.txt  setup.py  train_cabinet_citys.py  training_validation_config.json  uavid.py
.github/: CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md
.github/workflows/: ci.yml  pre-commit.yml
configs/: UAVid_info.json  cityscapes_info.json  train.yaml  train_citys.json  train_citys.yaml  train_uavid.json
configs/dataset/: cityscapes.yaml  uavid.yaml  uavid_yolo.yaml
configs/model/: mobilenetv3_large.yaml  mobilenetv3_small.yaml
configs/yolo/: uavid_train.yaml  uavid_val.yaml
core/datasets/: cityscapes.py  uavid.py
core/models/: cab.py  cabinet.py  mobilenetv3.py
core/utils/: logger.py
legacy/: train_uavid.json
scripts/: demo.py  evaluate.py  train.py
src/datasets/: cityscapes.py  transform.py  uavid.py
src/models/: cab.py  cabinet.py  constants.py  mobilenetv3.py
src/models/layers/: __init__.py  common.py
src/scripts/: convert_uavid_to_yolo.py  evaluate.py  train.py  visualize.py
src/utils/: colorTransformer.py  compute_class_weights_uavid.py  exceptions.py  logger.py  loss.py  optimizer.py  prepareTrainIdFiles.py  profiler.py  test_forward.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: test_training_pipeline.py
tests/unit/: test_loss.py  test_models.py  test_transforms.py  test_uavid_dataset.py  test_uavid_yolo_convert.py
