# pyproject.toml
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"


[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


# Enable experimental string processing (f-string formatting)
# experimental-string-processing = true

[tool.isort]
profile = "black"
line_length = 88
combine_as_imports = true
force_sort_within_sections = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["."]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Relax for fast prototyping
check_untyped_defs = true
no_implicit_optional = true

# Source - https://stackoverflow.com/a/73649493
# Posted by Aaron Alphonso
# Retrieved 2026-06-15, License - CC BY-SA 4.0

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py', 'src/*/*.py']

[tool.bandit]
# B311: standard random module is intentional for data augmentation (not security/crypto)
skips = ["B311", "B101"]
